refactor: separate api me & change password from auth to account
