# openapi.yaml
@@ -10,6 +10,8 @@ servers:
     description: Local
 tags:
   - name: Auth
+  - name: Account
+    description: User account management endpoints
   - name: Applications
   - name: Application Letters
   - name: Portfolios
@@ -115,9 +117,9 @@ paths:
           description: Logged out
         '401':
           $ref: '#/components/responses/Unauthorized'
-  /auth/me:
+  /account/me:
     get:
-      tags: [Auth]
+      tags: [Account]
       summary: Get current user
       security:
         - sessionCookie: []
@@ -131,7 +133,7 @@ paths:
         '401':
           $ref: '#/components/responses/Unauthorized'
     put:
-      tags: [Auth]
+      tags: [Account]
       summary: Update current user
       security:
         - sessionCookie: []
@@ -208,9 +210,9 @@ paths:
                 $ref: '#/components/schemas/MessageResponse'
         '400':
           $ref: '#/components/responses/ValidationError'
-  /auth/change-password:
+  /account/change-password:
     put:
-      tags: [Auth]
+      tags: [Account]
       summary: Change current password
       security:
         - sessionCookie: []
